updated the app and package name

--- a/README.Rmd
+++ b/README.Rmd
@@ -13,22 +13,22 @@ knitr::opts_chunk$set(
 )
 ```
 
-# CARE
+# CorePrinciplesGenAI
 
 <!-- badges: start -->
 <!-- badges: end -->
 
-The goal of CARE is to provide a simple web interface for completing the Checklist for assessing responsible use of AI in research (CARE) for a research project. At the end of the project CARE could be filled out through this Shiny app and a well-formatted report can be generated to supplement the paper.
+The goal of CorePrinciplesGenAI is to provide a simple web interface for completing the checklist for the __Core Principles of Responsible Generative AI Usage in Research__ project. At the end of a research project this checklist could be filled out through this Shiny app and a well-formatted report can be generated to supplement the paper.
 
 The Shiny app is based on the [Transparency Checklist](https://github.com/BalazsAczel/TransparencyChecklist).
 
 ## Installation
 
-You can install the development version of CARE from [GitHub](https://github.com/) with:
+You can install the development version of CorePrinciplesGenAI from [GitHub](https://github.com/) with:
 
 ``` r
 # install.packages("devtools")
-devtools::install_github("marton-balazs-kovacs/CARE")
+devtools::install_github("marton-balazs-kovacs/CorePrinciplesGenAI")
 ```
 
 ## Example
@@ -36,7 +36,7 @@ devtools::install_github("marton-balazs-kovacs/CARE")
 To run the shiny application on your computer run the following command after the installation.
 
 ``` r
-CARE::run_app()
+CorePrinciplesGenAI::run_app()
 ```
 
 ## Feedback
