changed name to CorePrincipleGenAIChecklist

--- a/README.Rmd
+++ b/README.Rmd
@@ -13,22 +13,22 @@ knitr::opts_chunk$set(
 )
 ```
 
-# CorePrinciplesGenAI
+# Core Principles of Responsible Generative AI Usage in Research Checklist
 
 <!-- badges: start -->
 <!-- badges: end -->
 
-The goal of CorePrinciplesGenAI is to provide a simple web interface for completing the checklist for the __Core Principles of Responsible Generative AI Usage in Research__ project. At the end of a research project this checklist could be filled out through this Shiny app and a well-formatted report can be generated to supplement the paper.
+The goal of this project is to provide a simple web interface for completing the checklist for the __Core Principles of Responsible Generative AI Usage in Research__ project. At the end of a research project this checklist could be filled out through this Shiny app and a well-formatted report can be generated to supplement the paper.
 
 The Shiny app is based on the [Transparency Checklist](https://github.com/BalazsAczel/TransparencyChecklist).
 
 ## Installation
 
-You can install the development version of CorePrinciplesGenAI from [GitHub](https://github.com/) with:
+You can install the development version of CorePrincipleGenAIChecklist from [GitHub](https://github.com/) with:
 
 ``` r
 # install.packages("devtools")
-devtools::install_github("marton-balazs-kovacs/CorePrinciplesGenAI")
+devtools::install_github("marton-balazs-kovacs/CorePrincipleGenAIChecklist")
 ```
 
 ## Example
@@ -36,7 +36,7 @@ devtools::install_github("marton-balazs-kovacs/CorePrinciplesGenAI")
 To run the shiny application on your computer run the following command after the installation.
 
 ``` r
-CorePrinciplesGenAI::run_app()
+CorePrincipleGenAIChecklist::run_app()
 ```
 
 ## Feedback
